# onion-rpg

./: .dockerignore  .env.example  .gitignore  .orpg-workflow.js  CLAUDE.md  Dockerfile  Flash Instructions.md  GAME_MECHANICS.md  README.md  SPEC.md  bunfig.toml  docker-compose.yml  package.json  railway.json  svelte.config.js
beacon/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.old
beacon/challenges/: 0.1.json  1.1.json  1.2.json  1.3.json  2.0.json  2.1.json  2.2.json  2.3.json  3.1.json  3.2.json  3.3.json  3.4.json  4.1.json  4.2.json  README.md
beacon/main/: CMakeLists.txt  beacon_config.h  beacon_hello.c  beacon_hello.h  challenge_config.c  challenge_config.h  config.c  config.h  espnow_rx.c  espnow_rx.h  http_relay.c  http_relay.h  main.c  onion_proto.c  onion_proto.h
beacon/partitions/: partitions.csv
beacon/scripts/: flash_beacon.sh  flash_spiffs.sh  provision_serial.sh
deploy/: README.md  docker.sh  railway.sh
docker/: entrypoint.sh
docs/: CHALLENGES.md  CONTRACTS.md  RUNBOOK.md
firmware-ext/: API.md  README.md
oRPG/: README.md  oRPG.lua
oRPG/lib/: archetypes.lua  caps.lua  hardware.lua  identity.lua  net.lua  proto.lua  router.lua  ui.lua
oRPG/screens/: 0_1.lua  1_1.lua  1_2.lua  1_3.lua  2_0.lua  2_1.lua  2_2.lua  2_3.lua  3_1.lua  3_2.lua  3_3.lua  (+4 more)
scripts/: bundle-orpg.js  db-init.ts  db-kanban-seed.ts
sim/: README.md  badge.ts  beacon.ts  cli.ts  config.ts  protocol.test.ts  runner.ts  transport.ts  tsconfig.json
src/: app.css  app.d.ts  app.html  hooks.server.ts
tests/: game-loop.test.ts  setup.ts  tsconfig.json
(+147 files in other folders)
